fixed overflow on question-content-preview #questionBody and tried adding modal to the About link on left panel for questions & questions id page

--- a/public/stylesheets/questions-page.css
+++ b/public/stylesheets/questions-page.css
@@ -241,6 +241,8 @@ div {
   border-right: 2px solid grey;
   height: 100px;
   width: 100%;
+  min-height: fit-content;
+  min-width: fit-content;
   background-color: #ddecf0;
 }
 
@@ -252,6 +254,11 @@ div {
   background-color: #ddecf0;
 }
 #questionBody {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding-right:17px;
+  box-sizing: content-box;
   margin: 0 25px;
   font-size: 1.2em;
 }
@@ -325,7 +332,22 @@ div {
   height: 100%;
   border-left: 2px solid grey;
 }
-
+.question-content-preview-panel {
+  display: flex;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 3px;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  border-left: 2px solid grey;
+  overflow: hidden;
+}
+#questionBody {
+padding-right: 15px;
+}
 #answerContent {
   width: 95%;
 }
